# vdos-fondos-tfg

./: .env.example  .gitignore  LICENSE  README.md  demo.ps1  demo.sh  requirements.txt
data_muestra/: README.md  pdfs_extracted.json  pdfs_extracted_codes.json
data_muestra/csv/: meta_muestra.csv  vl_historico_muestra.csv
data_muestra/folletos/: LEEME.txt
extractor_cnmv/extractor/: __init__.py  assembler.py  catalogs.py  cli.py  guarantee_fields.py  helpers.py  loader.py  regex_fields.py  schema.py  segmenter.py  semantic_fields.py  table_fees.py  translator.py  validators.py
extractor_cnmv/extractor/llm/: __init__.py  catalog_labels.py  classifier.py  codigos_2026.py  gemini_client.py  openai_client.py  p00_rules.py
extractor_cnmv/rag/: __init__.py  advisor.py  chat.py  embed.py  index.py  labels.py  news.py  risk_config.py  simple_store.py  streamlit_app.py  streamlit_minimal.py
extractor_cnmv/tests/: test_runner.py
web/backend/: pyproject.toml
web/backend/app/: __init__.py  config.py  deps.py  main.py
web/backend/app/api/: asesor.py  compare.py  estudio.py  inicio.py  news.py
web/backend/app/schemas/: advisor.py  compare.py  estudio.py  fund.py  news.py  profile.py
web/backend/app/services/: adapters.py  catalog.py  estudio.py  funds_data.py  kappa.py  metricas_cuanti.py  rubrica.py  timeseries.py  translate.py
web/backend/scripts/: build_db.py
web/backend/tests/: test_api.py
web/frontend/: asesor.html  comparador.html  estudio.html  index.html  package.json  tailwind.config.js
web/frontend/scripts/: api.js
web/frontend/styles/: input.css  (+1 more)
(+15 files in other folders)
