[project]
name = "vdos-web-backend"
version = "0.1.0"
description = "FastAPI thin layer over extractor_cnmv RAG/advisor/news for the VDOS Funds Explorer web."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "openai>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
